[project]
name = "dbdepflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anand2312", email = "40204976+anand2312@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.28.2",
]

[project.optional-dependencies]
oracle = [
    "oracledb>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
]
